added edit_comment call as well as modified read_comment to return the whole comment and handle html transformations
